err/fms.err
Listing '.'...
Listing './bin'...
Compiling './bin/startfms.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/fms'...
Listing './lib/python3.5/site-packages/fms/agents'...
Compiling './lib/python3.5/site-packages/fms/agents/__init__.py'...
***   File "./lib/python3.5/site-packages/fms/agents/__init__.py", line 34
    raise MissingParameter, key
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fms/agents/playorderlogfile.py'...
***   File "./lib/python3.5/site-packages/fms/agents/playorderlogfile.py", line 41
    raise MissingParameter, 'filename'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fms/agents/randomtrader.py'...
***   File "./lib/python3.5/site-packages/fms/agents/randomtrader.py", line 82
    raise MissingParameter, 'avgprice'
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fms/agents/zerointelligencetrader.py'...
***   File "./lib/python3.5/site-packages/fms/agents/zerointelligencetrader.py", line 63
    raise MissingParameter, 'maxprice'
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fms/engines'...
Compiling './lib/python3.5/site-packages/fms/engines/asynchronousrandwreplace.py'...
***   File "./lib/python3.5/site-packages/fms/engines/asynchronousrandwreplace.py", line 63
    print AsynchronousRandWReplace()
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fms/engines/synchronousrandwreplace.py'...
***   File "./lib/python3.5/site-packages/fms/engines/synchronousrandwreplace.py", line 64
    print SynchronousRandWReplace()
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fms/markets'...
Compiling './lib/python3.5/site-packages/fms/markets/__init__.py'...
***   File "./lib/python3.5/site-packages/fms/markets/__init__.py", line 130
    raise MissingParameter, 'direction'
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fms/utils'...
Compiling './lib/python3.5/site-packages/fms/utils/parsers.py'...
***   File "./lib/python3.5/site-packages/fms/utils/parsers.py", line 225
    raise MissingParameter, 'world classname'
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fms/worlds'...
Compiling './lib/python3.5/site-packages/fms/worlds/nullworld.py'...
***   File "./lib/python3.5/site-packages/fms/worlds/nullworld.py", line 22
    print NullWorld()
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fms-0.1.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
